fix: animation on iphone #dices-home

--- a/css/styles.css
+++ b/css/styles.css
@@ -175,10 +175,8 @@ button {
   position: relative;
 }
 #white-dice {
-  left: var(--left-wDice);
 }
 #green-dice {
-  left: var(--left-gDice);
   top: var(--t-gDice);
 }
 .Gdice__move-in {
